--- a/bmi-calculator/package.json
+++ b/bmi-calculator/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "ts-node": "ts-node",
     "calculate-bmi": "ts-node bmiCalculator.ts",
+    "calculate-exercises": "ts-node exerciseCalculator.ts",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
